# cosmic-ext-applet-yt-dlp

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
i18n/en/: cosmic_ext_applet_yt_dlp.ftl
i18n/pt-BR/: cosmic_ext_applet_yt_dlp.ftl
i18n/sv/: cosmic_ext_applet_yt_dlp.ftl
res/: dev.DBrox.CosmicYtdlp.desktop  dev.DBrox.CosmicYtdlp.metainfo.xml  install.sh
src/: applet.rs  fetcher.rs  formats.rs  i18n.rs  main.rs  ytdlp.rs
