[package]
name = "cosmic-ext-applet-yt-dlp"
version = "0.1.0"
edition = "2024"
authors = ["D-Brox <davidfbg00@gmail.com>"]
license = "GPL-3.0-only"
description = "A simple yt-dlp GUI for the COSMIC DE"

[dependencies]
ashpd = "0.11.0"
i18n-embed-fl = "0.9.1"
rust-embed = "8.5.0"
tokio = "1.44.2"
tokio-stream = "0.1.17"
xdg = "2.5.2"
xdg-user = "0.2.1"
yt-dlp = "1.3.2"

[dependencies.chrono]
version = "0.4.40"
default-features = false
features = ["std","clock"]

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

# # Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }

[package.metadata.deb]
license-file = "LICENSE"
assets = [
    ["target/release/cosmic-ext-applet-yt-dlp", "usr/bin/", "755"],
    ["res/dev.DBrox.CosmicYtdlp.desktop", "usr/share/applications/", "644"],
    ["res/dev.DBrox.CosmicYtdlp.metainfo.xml", "usr/share/metainfo/", "644"],
]
depends = ["libc6", "liblzma5", "libssl3", "libxkbcommon0"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cosmic-ext-applet-yt-dlp", dest = "/usr/bin/", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/cosmic-ext-applet-yt-dlp/LICENSE", doc = true, mode = "644" },
    { source = "res/*.metainfo.xml", dest = "/usr/share/metainfo/", doc = true, mode = "644" },
    { source = "res/*.desktop", dest = "/usr/share/applications/", mode = "644" }
]

[package.metadata.generate-rpm.requires]
glibc = "*"
libxkbcommon = "*"
openssl3-libs = "*"
xz-libs = "*"
